--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.png" />
 
     <!--
     Do not use @7 in production, use a complete version like x.x.x, see website for latest version:
     https://www.algolia.com/doc/guides/building-search-ui/installation/react/#load-the-style
     -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/instantsearch.css@7/themes/satellite-min.css"
-    />
+    /> -->
 
-    <title>bandsaws-react</title>
+    <title>Bandsaws</title>
   </head>
 
   <body>
