Use MaterialUI table

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       href="https://cdn.jsdelivr.net/npm/instantsearch.css@7/themes/satellite-min.css"
     /> -->
 
+    <!-- Fonts to support Material Design -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
+    />
+
     <title>Bandsaws</title>
   </head>
 
